[gd_scene load_steps=2 format=2]

[ext_resource path="res://UnitEquipmentControl.gd" type="Script" id=1]

[node name="UnitEquipmentControl" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="NameButton" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 20.0
toggle_mode = true

[node name="ArmourSelection" type="OptionButton" parent="."]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="PurchasedItems" type="VBoxContainer" parent="."]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 48.0

[connection signal="pressed" from="NameButton" to="." method="_on_NameButton_pressed"]
